QueryBill functionality added && api routes updated
