# routes/api.php
@@ -18,8 +18,11 @@ Route::prefix('v1')->name('v1.')->middleware(['force-json'])->group(function() {
         Route::put('/', [App\Http\Controllers\Api\v1\UsageController::class, 'addUsage'])->name('add-usage');
     });
 
-    Route::prefix('bill')->name('bill.')->middleware(['auth:sanctum'])->group(function() {
-        Route::post('calculate', [App\Http\Controllers\Api\v1\BillController::class, 'calculateBill'])->name('calculate');
+    Route::prefix('bill')->name('bill.')->group(function() {
+        Route::middleware(['auth:sanctum'])->group(function() {
+            Route::post('calculate', [App\Http\Controllers\Api\v1\BillController::class, 'calculateBill'])->name('calculate');
+        });
+        Route::post('query', [App\Http\Controllers\Api\v1\BillController::class, 'queryBill'])->name('query');
     });
 
 
